# rust-wtf8

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  not_quite_std.rs
